--- a/Lesson09-ToDo-List/T09.01-Exercise-SetupContentProvider/app/src/main/AndroidManifest.xml
+++ b/Lesson09-ToDo-List/T09.01-Exercise-SetupContentProvider/app/src/main/AndroidManifest.xml
@@ -24,9 +24,12 @@
         <activity
             android:name="com.example.android.todolist.AddTaskActivity"
             android:label="@string/add_task_activity_name" />
-
-        <!-- TODO (3) Register the TaskContentProvider -->
-        <!-- TODO (4) Set name, authorities, and exported attributes -->
+        <provider
+            android:authorities="com.example.android.todolist"
+            android:name="com.example.android.todolist.data.TaskContentProvider"
+            android:exported="false"/>
+        <!--   (3) Register the TaskContentProvider -->
+        <!--   (4) Set name, authorities, and exported attributes -->
         <!-- exported = false limits access to this ContentProvider to only this app -->
 
     </application>
