--- a/Lesson11-Completeing-The-UI/T11.01-Exercise-ConstraintLayout/app/build.gradle
+++ b/Lesson11-Completeing-The-UI/T11.01-Exercise-ConstraintLayout/app/build.gradle
@@ -6,10 +6,12 @@ android {
 
     defaultConfig {
         applicationId "com.example.android.boardingpass"
-        minSdkVersion 10
+        minSdkVersion 14
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
+        vectorDrawables.useSupportLibrary = true
+
     }
 
     buildTypes {
@@ -23,5 +25,6 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:25.1.0'
-    // TODO (1) Add the compile dependency for the constraint layout support library
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    //   (1) Add the compile dependency for the constraint layout support library
 }
